[tool.poetry]
name = "pychat"
version = "0.1.0"
description = ""
authors = ["Michael Wayman <michaelwayman@gmail.com>"]
readme = "README.md"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
